--- a/src/assets/css/Header.css
+++ b/src/assets/css/Header.css
@@ -6,6 +6,7 @@
     color:orange;
     padding:10px 25px;
     box-sizing: border-box;
+    box-shadow:1px 2px 5px rgba(0,0,0,0.05);
 
     display: flex;
     justify-content: center;
