--- a/src/assets/css/SearchInput.css
+++ b/src/assets/css/SearchInput.css
@@ -6,24 +6,30 @@
     box-sizing: border-box;
 
     display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: flex-start;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items:center;
 }
 
 #search_input-form{
     padding:10px 25px;
+    margin:5% 0 0 0;
     box-sizing: border-box;
     height: 50px;
     width:50%;
     background:white;
     border:1px solid rgba(0,0,0,0.05);
     border-radius:3px;
-    box-shadow: 1px 5px 5px rgba(0,0,0,0.1);
-
+    box-shadow: 1px 2px 5px rgba(0,0,0,0.1);
+    
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+#search_input-form:hover{
+    box-shadow: 1px 5px 5px rgba(0,0,0,0.1);
+    transform: scale(1.05);
 }
 
 #search_input-form #search-input{
@@ -37,7 +43,6 @@
     color:gray;
     font-size:16px;
 }
-
 
 #search_input-form #search-btn{
     width:15%;
