--- a/src/assets/css/Footer.css
+++ b/src/assets/css/Footer.css
@@ -2,10 +2,15 @@
     height: 100px;
     width:100%;
     background: white;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    padding:5px 25px;
+    color:gray;
+    font-weight:100;
+    font-size:14px;
     border-top:1px solid rgba(0,0,0,0.1);
     box-shadow: 1px 1px 5px rgba(0,0,0,0.1);
     box-sizing: border-box;
+
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
 }
